# sparc-hub

./: README.md  package-lock.json
client/: constants.ts  interface.tsx  next.config.mjs  package-lock.json  package.json  reviewData.json  societyData.json  tailwind.config.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/(navbar)/: SocietyClient.tsx  layout.tsx  page.tsx
client/src/app/components/: SearchBar.tsx
client/src/app/context/: AuthContext.tsx
client/src/components/: Button.tsx  Chip.tsx  DropdownSelect.tsx  Input.tsx  InputField.tsx  Navbar.tsx  Rating.tsx  Review.tsx  ReviewCard.tsx  ReviewSocietyModal.tsx  SearchBar.tsx  StarRating.tsx  Tag.tsx  TagGroup.tsx  Textbox.tsx  Tooltip.tsx
server/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/src/: server.ts
server_rust/: .env  .gitignore  Cargo.toml
server_rust/migrations/: 20240309000000_initial_schema.down.sql  20240309000000_initial_schema.up.sql  20240309000001_convert_to_snake_case.down.sql  20240309000001_convert_to_snake_case.up.sql  20240309000002_change_to_timestamptz.down.sql  20240309000002_change_to_timestamptz.up.sql  20240309000003_add_blacklisted_tokens.down.sql  20240309000003_add_blacklisted_tokens.sql
server_rust/src/: error.rs  main.rs
server_rust/src/handlers/: auth.rs  mod.rs  review.rs  society.rs  user.rs
server_rust/src/models/: auth.rs  mod.rs  review.rs  society.rs  tag.rs  user.rs
server_rust/src/services/: auth.rs  mod.rs  review.rs  society.rs  user.rs
(+14 files in other folders)
