[package]
name = "server_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = {version = "1", features = ["full"]}
chrono = {version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
axum = "0.7.9"
httpc-test = "0.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = {version = "0.6.2", features = ["fs"]}
tower-cookies = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
jsonwebtoken = "9.2"
axum-extra = { version = "0.9", features = ["typed-header"] }
validator = { version = "0.16", features = ["derive"] }

[profile.dev.package.sqlx-macros]
opt-level = 3